--- a/src/components/layout.astro
+++ b/src/components/layout.astro
@@ -194,7 +194,7 @@ const { title, description, home = false } = Astro.props;
     <nav>
       <ul>
         <li>
-          <a class="footer-link" href="https://www.netlify.com/trust-center/">Trust Center</a>
+          <a class="footer-link" href="https://www.netlify.com/trust-center/">rust Center</a>
         </li>
         <li>
           <a class="footer-link" href="https://www.netlify.com/privacy/">Privacy</a>
